<resources>
    <string name="CALL_STATE_CONNECTING">CONNECTING</string>
    <string name="CALL_STATE_DIALING">DIALING</string>
    <string name="CALL_STATE_DISCONNECTING">DISCONNECTING</string>
    <string name="CALL_STATE_HOLDING">ON HOLD</string>
    <string name="CALL_STATE_INCOMING_CALL">INCOMING CALL</string>
    <string name="CALL_STATE_OUTGOING_CALL">OUTGOING CALL</string>
    <string name="Company_Activity">Company description</string>
    <string name="Company_Name">Company Name</string>
    <string name="Company_Website">Company Website</string>
    <string name="Delete_from_log">Delete from Log</string>
    <string name="Report_has_been_saved">Report has been saved!</string>
    <string name="_continue">Continue</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="according_to_google_policy_our_app_can_access_your_call_log_only_if_it_s_set_as_default_phone_app_until_then_we_will_show_list_of_checked_calls_here_if_you_want_to_see_your_calllog_switch_protection_to_active">"According to Google Policy, our app can access your call log only if it's set as default phone app. Until then we will show list of checked calls only. If you want to see your call log please switch the protection to Active."</string>
    <string name="account_info_1">Thanks to anonymous account you will be able to backup and restore your app data (all your reviews, blocked and allowed numbers) and settings on any device without connection to your email or phone number.</string>
    <string name="account_info_2">Instead of use of email or phone number we will generate unique anonymous User ID which can be optionally protected by password.</string>
    <string name="account_settings">Account Settings</string>
    <string name="account_settings_help">"We really want to keep your account anonymous. That's why it is not connected either with your e-mail or your phone number. We will generate a unique user ID instead. Don't forget to store it afterwards, you must paste it back manually after log out or for new sign in - either in your old or in new mobile phone."</string>
    <string name="account_settings_help2">"Don't forget to store it afterwards, you must paste it back manually after log out or for new sign in - either in your old or in new mobile phone."</string>
    <string name="active_protection">Active Protection</string>
    <string name="active_protection_more_info_description">With active protection you will be able to use all features of our app. System will automatically call our app to check incoming calls, so the app will not need to use any workarounds which consume more system resources and should fail sometimes.</string>
    <string name="active_protection_more_info_title">Why use Active Protection?</string>
    <string name="activity_about_but_about_application">About Application</string>
    <string name="activity_about_but_follow_facebook">Our Facebook Page</string>
    <string name="activity_about_but_privacy">Privacy Policy</string>
    <string name="activity_about_but_promo">How to help our community</string>
    <string name="activity_about_but_terms">Terms of Use</string>
    <string name="activity_about_dyn_database_update_finished">Database Update Finished</string>
    <string name="activity_about_dyn_database_update_start">Database Update Started</string>
    <string name="activity_about_tv_main_title">Should I Answer</string>
    <string name="activity_incall_but_disconnect_accessibility">Disconnect</string>
    <string name="activity_local_review_edit_comment_label">Comment</string>
    <string name="activity_main_but_fab_accessibility">Show Dialpad</string>
    <string name="activity_main_side_but_about">About</string>
    <string name="activity_main_side_but_community">Community</string>
    <string name="activity_main_side_but_report_issue">Report issue</string>
    <string name="activity_main_side_but_settings">Settings</string>
    <string name="activity_number_detail_img_contact_photo">Contact picture</string>
    <string name="activity_permissions_tv_main_description">Should I Answer needs some system permissions to start protecting you against unwanted calls!</string>
    <string name="activity_promo_but_follow_facebook">Open Facebook Page</string>
    <string name="activity_promo_but_share_app">Share App</string>
    <string name="activity_promo_but_write_app_review">Write review</string>
    <string name="activity_promo_tv_follow_facebook_description">Join our Facebook community to be in closer contact with us.</string>
    <string name="activity_promo_tv_follow_facebook_title">Follow us on Facebook</string>
    <string name="activity_promo_tv_main_description">Help us to make the world a better place!</string>
    <string name="activity_promo_tv_main_title">We are here to protect you!</string>
    <string name="activity_promo_tv_make_donation_title">Make Donation</string>
    <string name="activity_promo_tv_recommend_app_description">Suggest our app to your friends, share our link on social networks, forums, or blogs… Help the community grow - more people means more information.</string>
    <string name="activity_promo_tv_recommend_app_title">Recommend the app to your friends</string>
    <string name="activity_promo_tv_write_app_review_description">If you think we deserve it, do it! Google Play reviews will help new users decide to join our community!</string>
    <string name="activity_promo_tv_write_app_review_title">Write 5 Star Review</string>
    <string name="activity_promo_tv_write_number_review">Write phone number reviews</string>
    <string name="activity_promo_tv_write_number_review_description">"If you find some new information about any unsolicited call don't keep it for yourself. Share it with our community!"</string>
    <string name="activity_settings_blocking_but_pick_contact">Pick Contact</string>
    <string name="activity_settings_blocking_but_pick_group">Pick Group</string>
    <string name="activity_settings_blocking_dialog_pick_contact_group_title">Pick Contact Group</string>
    <string name="activity_settings_blocking_dyn_protection_high_info">High Protection - higher possibility of false positive</string>
    <string name="activity_settings_blocking_dyn_protection_low_info">Lower Protection - minimal possibility of false positive</string>
    <string name="activity_settings_blocking_dyn_protection_standard_info">Standard Protection - low possibility of false positive</string>
    <string name="activity_settings_blocking_edit_block_by_contact_group_hint">Enter Contact Group List</string>
    <string name="activity_settings_blocking_edit_block_by_contact_group_label">Contact Group List</string>
    <string name="activity_settings_blocking_edit_block_by_contacts_hint">Enter Contact List</string>
    <string name="activity_settings_blocking_edit_block_by_contacts_label">Contact List</string>
    <string name="activity_settings_blocking_tv_block_by_contact_groups_title">Block contact groups</string>
    <string name="activity_settings_blocking_tv_block_by_contacts_title">Block Contacts</string>
    <string name="activity_settings_blocking_tv_community_db_sensitivity_title">Set Community DB sensitivity</string>
    <string name="activity_settings_experts_remove_blocked_calls_from_calllog">Remove blocked calls from call log</string>
    <string name="activity_settings_experts_tv_use_pick_and_hang_description">This feature does not work on all devices. Disable it if you find any issue with this function.</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="block_incoming_call_when_number_is">Block INCOMING call when number is</string>
    <string name="block_outgoing_call_when_number_is">Block OUTGOING call when number is</string>
    <string name="block_spam_reported_by_community">Block spam reported by community?</string>
    <string name="blocked_list_no_items_text">"There's nobody in your personal blacklist yet. You have the patience of a saint, don't you?"</string>
    <string name="blocked_numbers_help">These numbers will be always blocked. They will not be able to call you - even if other users reported them as safe. You can add new number by tapping on the icon below - write the number at best in full international format, without spaces and other letters (only allowed are +, digits and * for group rule).</string>
    <string name="buy_subscription_motivation_text">Right now, all app features are available for free. If you think we deserve your support, you can subscribe to any tier.</string>
    <string name="close">Close</string>
    <string name="disallow_call">Disallow call</string>
    <string name="don_t_show_again">"Don't show again"</string>
    <string name="foreign_number">foreign number</string>
    <string name="hidden_number">hidden number</string>
    <string name="how_to_block_calls">How to block calls?</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="mister_group_s_r_o">© Mister Group s.r.o.</string>
    <string name="not_stored_in_contacts">not stored in Contacts</string>
    <string name="other_blocking_rules">Other Blocking rules</string>
    <string name="outgoing_call">Outgoing Call</string>
    <string name="panel_but_try_again">Try Again</string>
    <string name="panel_internet_error">Internet Connection Error</string>
    <string name="pick_and_hang_up">Pick and hang up</string>
    <string name="premium_number">premium number</string>
    <string name="reading_data">Reading data</string>
    <string name="reject_call">Reject call</string>
    <string name="reported_by_you_as_spam">reported by you as spam</string>
    <string name="subscribe">"Subscribe
%s"</string>
    <string name="this_feature_can_be_used_with_custom_call_screen_only_you_can_set_it_in_the_protection_settings">This feature can be used with \"Custom call screen\" only. You can set it in the Protection Settings.</string>
    <string name="tier_1">Tier 1</string>
    <string name="tier_2">Tier 2</string>
    <string name="tier_3">Tier 3</string>
</resources>